Build static librdkafka_windows.a with travis and mingw (@neptoess, #3130)
* Build static librdkafka_windows.a with travis

* Update paths to match Travis MinGW build script

* Update DLL paths

* Replace tabs with spaces

* Don't use msys2 rm, just use regular travis one

* Add Win32 DLLs to MinGW C++ pkg-config

* Relocate MinGW target_link_libraries to allow building executables

* Update CMakeLists.txt to include pkg-config for Windows DLLs for static MinGW builds

* Write to librdkafka.a instead of librdkafka_windows.a
Update CMakeLists.txt to only generate -static .pc files when building static lib
Run cmake-format on CMakeLists.txt

* Update packing script for different .a file name

* Separate MinGW static build and dynamic build
Turn WITH_SASL=ON for Windows build so OATHBEARER SASL can be used

* Restore previous whitespace style in CMakeLists.txt

* CMakeLists.txt formatting

* Undo CMakeLists.txt whitespace-only changes
Remove cmake options where we like the defaults
Add libdl and libz to static MinGW build to support WITH_PLUGINS and WITH_ZLIB

* Fix accidental tab characters in packaging/mingw-w64/travis-before-install.sh

* Default WITH_PLUGINS to ON on Windows CMake builds
Remove libdl from MinGW build
Fix typo when WITHOUT_WIN32_CONFIG is ON

* Modify CMAKE_FIND_LIBRARY_SUFFIXES instead of deleting .dll.a files

* Make use of Libs.private

* Fix a CMake check using WITH_PLUGINS when it should have been using WITH_LIBDL

* Add strip calls for MinGW static libraries

* Slight CMakeLists.txt refactor per SpaceIm comment

* Move CMAKE_FIND_LIBRARY_SUFFIXES from CMakeLists.txt to the Travis build script

Co-authored-by: neptoess <neptoess@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ endif()
 # }
 
 # WITH_PLUGINS {
-if(WITH_LIBDL)
+if(WITH_LIBDL OR WIN32)
   set(with_plugins_default ON)
 else()
   set(with_plugins_default OFF)
@@ -260,8 +260,6 @@ install(
     FILES LICENSES.txt
     DESTINATION "share/licenses/librdkafka"
 )
-
-# }
 
 add_subdirectory(src)
 add_subdirectory(src-cpp)
