--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -152,9 +152,9 @@ if(WITHOUT_WIN32_CONFIG)
     list(APPEND rdkafka_compile_definitions ENABLE_DEVEL=0)
   endif(ENABLE_DEVEL)
   if(WITH_PLUGINS)
-    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=1)
+    list(APPEND rdkafka_compile_definitions WITH_PLUGINS=1)
   else()
-    list(APPEND rdkafka_compile_definitions WITH_PLUGIN=0)
+    list(APPEND rdkafka_compile_definitions WITH_PLUGINS=0)
   endif(WITH_PLUGINS)
 endif()
 
@@ -180,20 +180,6 @@ target_include_directories(rdkafka PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST
 target_compile_definitions(rdkafka PUBLIC ${rdkafka_compile_definitions})
 if(RDKAFKA_BUILD_STATIC)
   target_compile_definitions(rdkafka PUBLIC LIBRDKAFKA_STATICLIB)
-endif()
-
-if(MINGW)
-	message(STATUS "Detected MinGW build")
-  # MinGW ignores `#pragma comment(lib, ...)` so we need to specify link libs
-  target_link_libraries(rdkafka PUBLIC crypt32 ws2_32 secur32)
-endif(MINGW)
-
-if(WIN32)  
-  if(RDKAFKA_BUILD_STATIC)
-    target_link_libraries(rdkafka PUBLIC crypt32)
-  else()
-    target_compile_definitions(rdkafka PRIVATE LIBRDKAFKA_EXPORTS)
-  endif()
 endif()
 
 # We need 'dummy' directory to support `#include "../config.h"` path
@@ -257,80 +243,85 @@ if(WITH_LZ4_EXT)
   target_link_libraries(rdkafka PUBLIC LZ4::LZ4)
 endif()
 
-# Set up path to these sources for other sub-projects (tests, examples)
-# to be able to reach them.
-#set(rdkafka_SRC_DIR ${PROJECT_SOURCE_DIR}
-#    CACHE INTERNAL "${PROJECT_NAME} source dir" FORCE)
+if(WIN32)
+  if(WITH_SSL)
+    target_link_libraries(rdkafka PUBLIC crypt32)
+  endif()
+
+  target_link_libraries(rdkafka PUBLIC ws2_32 secur32)
+  if(NOT RDKAFKA_BUILD_STATIC)
+    target_compile_definitions(rdkafka PRIVATE LIBRDKAFKA_EXPORTS)
+  endif()
+endif()
 
 # Generate pkg-config file
-set(PKG_CONFIG_NAME
-    "librdkafka"
-)
-set(PKG_CONFIG_DESCRIPTION
-    "The Apache Kafka C/C++ library"
-)
-set(PKG_CONFIG_VERSION
-    "${PROJECT_VERSION}"
-)
+set(PKG_CONFIG_VERSION "${PROJECT_VERSION}")
 set(PKG_CONFIG_REQUIRES "")
-if(WITH_ZLIB)
-  string(APPEND PKG_CONFIG_REQUIRES "zlib ")
+if (WIN32)
+  set(PKG_CONFIG_LIBS_PRIVATE "-lws2_32 -lsecur32 -lcrypt32")
+else()
+  set(PKG_CONFIG_LIBS_PRIVATE "-lpthread")
+  find_library(RT_LIBRARY rt)
+  if(RT_LIBRARY)
+    string(APPEND PKG_CONFIG_LIBS_PRIVATE " -lrt")
+  endif()
+
+  if(WITH_LIBDL)
+    string(APPEND PKG_CONFIG_LIBS_PRIVATE " -ldl")
+  endif()
+
+  if(WITH_HDRHISTOGRAM)
+    string(APPEND PKG_CONFIG_LIBS_PRIVATE " -lm")
+  endif()
 endif()
-if(WITH_SSL)
+
+if(NOT RDKAFKA_BUILD_STATIC)
+  set(PKG_CONFIG_NAME "librdkafka")
+  set(PKG_CONFIG_DESCRIPTION "The Apache Kafka C/C++ library")
+  if(WITH_ZLIB)
+    string(APPEND PKG_CONFIG_REQUIRES "zlib ")
+  endif()
+
+  if(WITH_SSL)
     string(APPEND PKG_CONFIG_REQUIRES "libssl ")
-endif()
-if(WITH_SASL_CYRUS)
-  string(APPEND PKG_CONFIG_REQUIRES "libsasl2 ")
-endif()
-if(WITH_ZSTD)
+  endif()
+
+  if(WITH_SASL_CYRUS)
+    string(APPEND PKG_CONFIG_REQUIRES "libsasl2 ")
+  endif()
+
+  if(WITH_ZSTD)
     string(APPEND PKG_CONFIG_REQUIRES "libzstd ")
-endif()
-if(WITH_LZ4_EXT)
+  endif()
+
+  if(WITH_LZ4_EXT)
     string(APPEND PKG_CONFIG_REQUIRES "liblz4 ")
-endif()
-set(PKG_CONFIG_CFLAGS
-    "-I\${includedir}"
-)
-set(PKG_CONFIG_LIBS
-    "-L\${libdir} -lrdkafka"
-)
-set(PKG_CONFIG_LIBS_PRIVATE
-    "-lpthread"
-)
-find_library(RT_LIBRARY rt)
-if(RT_LIBRARY)
-  string(APPEND PKG_CONFIG_LIBS_PRIVATE " -lrt")
-endif()
-if(WITH_PLUGINS)
-  string(APPEND PKG_CONFIG_LIBS_PRIVATE " -ldl")
-endif()
-if(WITH_HDRHISTOGRAM)
-  string(APPEND PKG_CONFIG_LIBS_PRIVATE " -lm")
-endif()
-configure_file(
-  "../packaging/cmake/rdkafka.pc.in"
-  "${GENERATED_DIR}/rdkafka.pc"
-  @ONLY
-)
-install(FILES ${GENERATED_DIR}/rdkafka.pc
-  DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
-)
-if(RDKAFKA_BUILD_STATIC)
-  set(PKG_CONFIG_NAME
-    "librdkafka-static"
+  endif()
+
+  set(PKG_CONFIG_CFLAGS "-I\${includedir}")
+  set(PKG_CONFIG_LIBS "-L\${libdir} -lrdkafka")
+
+  configure_file(
+    "../packaging/cmake/rdkafka.pc.in"
+    "${GENERATED_DIR}/rdkafka.pc"
+    @ONLY
   )
-  set(PKG_CONFIG_DESCRIPTION
-    "The Apache Kafka C/C++ library (static)"
+  install(
+    FILES ${GENERATED_DIR}/rdkafka.pc
+    DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
   )
-  set(PKG_CONFIG_LIBS
-    "-L\${libdir} \${libdir}/librdkafka.a"
-  )
+else()
+  set(PKG_CONFIG_NAME "librdkafka-static")
+  set(PKG_CONFIG_DESCRIPTION "The Apache Kafka C/C++ library (static)")
+  set(PKG_CONFIG_CFLAGS "-I\${includedir} -DLIBRDKAFKA_STATICLIB")
+  set(PKG_CONFIG_LIBS "-L\${libdir} \${libdir}/librdkafka.a")
   configure_file(
     "../packaging/cmake/rdkafka.pc.in"
     "${GENERATED_DIR}/rdkafka-static.pc"
     @ONLY
   )
-  install(FILES ${GENERATED_DIR}/rdkafka.pc
+  install(
+    FILES ${GENERATED_DIR}/rdkafka-static.pc
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/pkgconfig"
   )
 endif()
