--- a/win32/tests/tests.vcxproj
+++ b/win32/tests/tests.vcxproj
@@ -207,6 +207,7 @@
     <ClCompile Include="..\..\tests\0123-connections_max_idle.c" />
     <ClCompile Include="..\..\tests\0124-openssl_invalid_engine.c" />
     <ClCompile Include="..\..\tests\0125-immediate_flush.c" />
+    <ClCompile Include="..\..\tests\0127-fetch_queue_backoff.cpp" />
     <ClCompile Include="..\..\tests\8000-idle.cpp" />
     <ClCompile Include="..\..\tests\test.c" />
     <ClCompile Include="..\..\tests\testcpp.cpp" />
