--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ matrix:
     - ./configure --enable-static --install-deps --source-deps-only --disable-gssapi --disable-lz4-ext --prefix="$PWD/dest" --enable-strip
 
  - name: "OSX GCC"
-   if: tag IS PRESENT
+   #if: tag IS PRESENT
    os: osx
    compiler: gcc
    env: LINKAGE=std HOMEBREW_NO_AUTO_UPDATE=1
