openssl cert debug

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,4 +1,7 @@
 version: 1.8.0-R-post{build}
+breaking this thing!
+yep
+
 pull_requests:
   do_not_increment_build_number: true
 image: Visual Studio 2015
