--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ matrix:
      os: osx
      before_script:
        - wget -o w.tgz https://www.openssl.org/source/openssl-1.1.1l.tar.gz || echo nope
-       - ls w.tgz
+       - ls -la w.tgz
+       - file w.tgz
        - tar tvzf w.tgz
        - curl -fL -o c.tgz https://www.openssl.org/source/openssl-1.1.1l.tar.gz || echo nope2
        - echo hi | openssl s_client -host www.openssl.org -port 443 || echo nope3
