Try breaking tests out to a separate step

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
     - source ./packaging/mingw-w64/travis-before-install.sh
    before_script:
     - ./packaging/mingw-w64/configure-build-msys2-mingw-static.sh
+   after_script:
+    - ./packaging/mingw-w64/run-tests.sh
 
 install:
  - ccache -s || echo "CCache is not available."
