--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -119,6 +119,7 @@ set(
     0125-immediate_flush.c
     0126-oauthbearer_oidc.c
     0128-sasl_callback_queue.cpp
+    0129-fetch_aborted_msgs.c
     8000-idle.cpp
     test.c
     testcpp.cpp
