--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,7 +1,7 @@
 version: 1.9.0-R-post{build}
 pull_requests:
   do_not_increment_build_number: true
-image: Visual Studio 2017
+image: Visual Studio 2015
 configuration: Release
 environment:
   runtime: v140
@@ -11,6 +11,7 @@ environment:
   - platform: win32
     arch: x86
 install:
+- ps: "& .\\win32\\enable-tls12.ps"
 - ps: "& .\\win32\\install-coapp.ps1"
   # Update vcpkg (is outdated on the VS 2015 image)
 - cmd: |
