--- a/examples/.gitignore
+++ b/examples/.gitignore
@@ -7,7 +7,10 @@ kafkatest_verifiable_client
 producer
 producer_cpp
 consumer
+consumer_custom_assignor
 idempotent_producer
+misc
+openssl_engine_example_cpp
 rdkafka_consume_batch
 transactions
 delete_records
