--- a/mklove/Makefile.base
+++ b/mklove/Makefile.base
@@ -162,9 +162,15 @@ endif # MKL_DYNAMIC_LIBS
 
 else # MKL_STATIC_LIBS is empty
 _STATIC_FILENAME=$(LIBNAME).a
-$(LIBNAME)-static.a:
-	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: Not creating self-contained static library $@: no static libraries available/enabled$(MKL_CLR_RESET)\n"
+$(LIBNAME)-static.a: $(LIBNAME).a
+	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: No static libraries available/enabled for inclusion in self-contained static library $@: this library will be identical to $(LIBNAME).a$(MKL_CLR_RESET)\n"
 endif # MKL_STATIC_LIBS
+ifneq ($(MKL_DYNAMIC_LIBS),)
+	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: The following libraries were not available as static libraries and need to be linked dynamically: $(MKL_DYNAMIC_LIBS)$(MKL_CLR_RESET)\n"
+	cp $(LIBNAME).a $@
+	cp $(LIBNAME)-dbg.a $(LIBNAME)-static-dbg.a
+	cp $@ $(LIBNAME)-static-dbg.a
+endif # MKL_DYNAMIC_LIBS
 
 endif # MKL_NO_SELFCONTAINED_STATIC_LIB
 
