--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,18 +8,22 @@ blocks:
     task:
       jobs:
         - name: 'Build'
+          env_vars:
+            - name: CC
+              value: gcc
           commands:
             - cd $SEM_WORKSPACE
             - checkout
+            - export WORKSPACE=$SEM_WORKSPACE/librdkafka
+            - cd $WORKSPACE
             - mkdir dest artifacts
-            - ./configure --install-deps --source-deps-only --disable-lz4-ext --prefix="$PWD/dest" --enable-strip
+            - ./configure --install-deps --source-deps-only --disable-lz4-ext --prefix="$WORKSPACE/dest" --enable-strip
             - make -j2 all examples check
             - make -j2 -C tests build
-    task:
-      jobs:
-        - name: 'Test'
-          commands:
-            - echo $PWD
-            #- cd $SEM_WORKSPACE
-            #- cd librdkafka
             - make -C tests run_local_quick
+            - make install
+            - cd $WORKSPACE/dest
+            - tar cvzf ${WORKSPACE}/artifacts/librdkafka-${CC}.tar.gz .
+            - artifact push job ${WORKSPACE}/artifacts/librdkafka-${CC}.tar.gz
+            - cd $WORKSPACE
+            - sha256sum artifacts/*
